# perseus-v3

./: .gitignore  README.md  devenv.nix  devenv.yaml  perseus-v3.code-workspace  treefmt.nix  treefmt.toml  typos.toml
.github/: CODEOWNERS
firmware/components/board-support/: CMakeLists.txt  Kconfig.projbuild  library.json
firmware/components/board-support/include/: board_support.hpp
firmware/components/board-support/src/: board_support.cpp
firmware/components/hi-can/: CMakeLists.txt  Kconfig.projbuild
firmware/components/hi-can/include/: hi_can_twai.hpp
firmware/components/hi-can/src/: hi_can_twai.cpp
firmware/components/type/: CMakeLists.txt
firmware/excavation-bucket/: CMakeLists.txt  platformio.ini  sdkconfig.debug
firmware/excavation-bucket/src/: CMakeLists.txt  main.cpp
nix/: overlays.nix  profiles.nix  scripts.nix  treefmt.nix
nix/extra-packages/: overlay.nix
nix/extra-packages/colcon/: README.md  colcon-ignore.nix  colcon-no-warnings.nix  overlay.nix  scantree.nix
nix/extra-packages/livox-sdk2/: default.nix
nix/extra-packages/ros-packages/perseus/: autonomy.nix  input-devices.nix  overlay.nix  pcl-to-lsr.nix  perseus-autonomy-bridge.nix  perseus-bt-nodes.nix  perseus-can-if.nix  perseus-description.nix  perseus-hardware.nix  perseus-input-config.nix  perseus-input.nix  perseus-interfaces.nix  perseus-lite-description.nix  perseus-lite-hardware.nix  perseus-lite.nix  perseus-mapping.nix  perseus-payloads.nix  perseus-sensors.nix  perseus-simulation.nix  perseus-vision.nix  perseus.nix  shell.nix  teleop-diagnostics.nix  template-package.nix
nix/machines/: default.nix
nix/machines/home/cli/: default.nix  devenv.nix
nix/machines/home/cli/zellij/: default.nix
nix/machines/home/shell/: default.nix
nix/machines/home/users/qutrc/: default.nix
nix/profiles/: base.nix  firmware.nix  web-ui.nix
software/: overlay.nix
software/native/: overlay.nix
software/native/examples/: README.md
software/native/examples/hi-can/basic-error/: CMakeLists.txt  package.nix
software/native/examples/hi-can/basic-error/src/: main.cpp
software/native/examples/hi-can/basic-rx/: CMakeLists.txt  package.nix
software/native/examples/hi-can/basic-rx/src/: main.cpp
software/native/examples/hi-can/basic-tx/: CMakeLists.txt  package.nix
software/native/examples/hi-can/basic-tx/src/: main.cpp
software/native/examples/hi-can/packet-manager-rx/: CMakeLists.txt  package.nix
software/native/examples/hi-can/packet-manager-rx/src/: main.cpp
software/native/examples/hi-can/packet-manager-tx/: CMakeLists.txt  package.nix
software/native/examples/hi-can/packet-manager-tx/src/: main.cpp
software/ros_ws/: .gitignore  README.md  colcon_defaults.yaml  overlay.nix  patches.nix
software/ros_ws/colcon/: clean.nix  colcon-with-extensions.nix
software/ros_ws/src/perseus/: CMakeLists.txt  package.xml
software/ros_ws/src/perseus/config/: perseus_controllers.yaml  twist_mux.yaml
software/ros_ws/src/perseus/launch/: controllers.launch.py  perseus.launch.py  robot_state_publisher.launch.py  twist_mux.launch.py
software/ros_ws/src/perseus/urdf/: perseus.urdf.xacro
software/ros_ws/src/perseus_description/: CMakeLists.txt  package.xml
software/ros_ws/src/perseus_description/launch/: view_perseus.launch.py
software/ros_ws/src/perseus_description/meshes/: differential_bar.dae  flange_bearing.dae  rocker_left.dae  rocker_right.dae  wheel.dae
software/ros_ws/src/perseus_description/ros2_control/: perseus.ros2_control.xacro
software/ros_ws/src/perseus_description/rviz/: view_perseus.rviz
software/ros_ws/src/perseus_description/urdf/: camera_d455_gazebo.xacro  chassis.urdf.xacro  flange_bearing.urdf.xacro  inertia_macros.xacro  motor_wheel.urdf.xacro  perseus.materials.xacro  perseus.urdf.xacro  rocker.urdf.xacro  sensors.urdf.xacro  wheel.urdf.xacro
software/ros_ws/src/ros2/: CMakeLists.txt  package.xml
software/ros_ws/src/ros2/include/template_node/: template_node.hpp
software/ros_ws/src/ros2/launch/: template.launch.py
software/ros_ws/src/ros2/src/template_node/: template_node.cpp
software/scripts/: clean.bash  clean.sh  devenv-install.sh  devenv-setup.sh  nix-package.sh  nix-setup.sh  overlay.nix  vcan-setup.sh
software/shared/: overlay.nix
software/shared/fd-wrapper/: CMakeLists.txt  default.nix
software/shared/fd-wrapper/include/: fd_wrapper.hpp
software/shared/fd-wrapper/src/: fd_wrapper.cpp
software/shared/hi-can/: CMakeLists.txt  default.nix
software/shared/hi-can-generator/: default.nix  hi-can-generator.py  setup.py
software/shared/hi-can-net/: CMakeLists.txt  config.cmake.in  default.nix
software/shared/hi-can-net/src/: hi_can_net.cpp
software/shared/hi-can-raw/: CMakeLists.txt  default.nix
software/shared/hi-can-raw/include/: hi_can_raw.hpp
software/shared/hi-can-raw/src/: hi_can_raw.cpp
software/shared/hi-can/include/: hi_can.hpp  hi_can_address.hpp  hi_can_packet.hpp  hi_can_parameter.hpp
software/shared/hi-can/src/: hi_can.cpp  hi_can_packet.cpp  hi_can_parameter.cpp
software/shared/hi-can/tests/: packet_manager_test.cpp
software/shared/ptr-wrapper/: CMakeLists.txt  config.cmake.in  default.nix
software/shared/ptr-wrapper/include/: ptr_wrapper.hpp
software/shared/ptr-wrapper/src/: ptr_wrapper.cpp
software/shared/simple-networking/: CMakeLists.txt  config.cmake.in  default.nix
software/shared/simple-networking/include/: simple_networking.hpp
software/shared/simple-networking/include/simple_networking/: client.hpp  core.hpp
software/shared/simple-networking/src/: client.cpp
software/web-ui/: .gitignore  .yarnrc.yml  devenv.nix  package.json
