<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perseus_description</name>
  <version>0.0.1</version>
  <description>Package containing description files for Perseus V2</description>

  <maintainer email="59348282+RandomSpaceship@users.noreply.github.com">james</maintainer>

  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>realsense2_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
